# amd

./: .dockerignore  .gitignore  AGENTS.md  GAP_REPORT_changes.md  GAP_REPORT_evidence_writer.md  README.md  Source_Of_Truth.md  TRACK1_STATUS_REPORT.md  chatgpt_smoke_input.json  container_smoke_input.json  evidence_writer.py  preflight_chatgpt_smoke.py  pyproject.toml  score_chatgpt_smoke.py  source_of_truth.json  trace_deterministic.py
amd_track1/: Dockerfile  Dockerfile.local-qwen  HYBRID_LOCAL_QWEN_STATUS.md  LOCAL_QWEN_MOVE_REPORT.md  LOCAL_QWEN_REMEDIATION_REPORT.md  VERIFICATION_POLICY.md  __init__.py  arithmetic_detection.py  benchmark_local_qwen_results.json  benchmark_local_qwen_routing.py  caption_styles.py  category_validator.py  chaos_benchmark.py  classifier.py  difficulty_gate.py  entrypoint.py  executor.py  frame_extractor.py  input_validation.py  local_client.py  model_registry.py  model_roles.py  prompt_builder.py  remote_mode.py  requirements.txt  retry_policy.py  router.py  start_local_agent.py  verifier.py
amd_track2/: Dockerfile  __init__.py  caption_gap_checker.py  caption_writer.py  classifier.py  context_extractor.py  difficulty_gate.py  entrypoint.py  evidence_packet.py  ffmpeg_resolver.py  frame_extractor.py  output_validator.py  retry_policy.py  router.py  video_fetcher.py  video_probe.py  vision_client.py
container_smoke_out/: results.json
scripts/: build-track1-image.ps1  compare-benchmarks.ps1  detect-dead-code.ps1  detect-duplicates.ps1  inspect-capabilities.ps1  inspect-dependencies.ps1  inspect-runtime.ps1  inspect-skills.ps1  publish-track1-image.ps1  run-benchmarks.ps1  run-container-smoke.ps1  run-track1-tests.ps1  validate-capability-registry.ps1  validate-skill-tree.ps1  verify-image-provenance.ps1
submission_assets/: AMD_Track1_Slides.md  README.md  Submission_Form_Values.md  VIDEO_BLOCKER_REPORT.md  Video_Script.md  generate_pdf.py  render_mp4.py
(+272 files in other folders)
